<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.point85</groupId>
  <artifactId>oee-apps</artifactId>
  <version>3.0.0</version>
  <packaging>jar</packaging>
  
  <name>Point85 OEE JavaFX Applications</name>
  <url>https://github.com/point85</url>

  <properties>
  	<domain.version>3.0.0</domain.version>
    <maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
<!-- OEE Domain jar -->
<dependency>
    <groupId>org.point85</groupId>
    <artifactId>oee-domain</artifactId>
    <version>${domain.version}</version>
</dependency>

<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
<dependency>
    <groupId>com.google.code.gson</groupId>
    <artifactId>gson</artifactId>
    <version>2.8.6</version>
</dependency>

<!--  OPC DA -->
<!--  https://github.com/IOT-DSA/dslink-java-opc -->
<!--  https://mvnrepository.com/artifact/org.openscada.jinterop/org.openscada.jinterop.deps -->
<dependency>
    <groupId>org.openscada.jinterop</groupId>
    <artifactId>org.openscada.jinterop.deps</artifactId>
    <version>1.5.0</version>
    <exclusions>
        <exclusion>  
            <!-- old slf4j-api -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </exclusion>
     </exclusions>     
</dependency>

<!-- https://mvnrepository.com/artifact/org.openscada.jinterop/org.openscada.jinterop.core -->
<dependency>
    <groupId>org.openscada.jinterop</groupId>
    <artifactId>org.openscada.jinterop.core</artifactId>
    <version>2.1.8</version>
    <exclusions>
        <exclusion>  
            <!-- old slf4j-api -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </exclusion>
     </exclusions>     
</dependency>

<!-- https://mvnrepository.com/artifact/org.openscada.utgard/org.openscada.opc.dcom -->
<dependency>
    <groupId>org.openscada.utgard</groupId>
    <artifactId>org.openscada.opc.dcom</artifactId>
    <version>1.5.0</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.openscada.utgard/org.openscada.opc.lib -->
<dependency>
    <groupId>org.openscada.utgard</groupId>
    <artifactId>org.openscada.opc.lib</artifactId>
    <version>1.5.0</version>
</dependency>

<!--  OPC UA -->
<!-- https://mvnrepository.com/artifact/org.eclipse.milo/sdk-client -->
<dependency>
    <groupId>org.eclipse.milo</groupId>
    <artifactId>sdk-client</artifactId>
    <version>0.4.1</version>
</dependency>

<!-- LOGGING -->
<!-- https://mvnrepository.com/artifact/log4j/log4j -->
<dependency>
    <groupId>log4j</groupId>
    <artifactId>log4j</artifactId>
    <version>1.2.17</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-log4j12</artifactId>
    <version>1.7.25</version>
</dependency>
 
<!-- https://mvnrepository.com/artifact/org.slf4j/jul-to-slf4j -->
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>jul-to-slf4j</artifactId>
    <version>1.7.25</version>
</dependency>

<!-- SQL Server DATABASE -->
<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
<dependency>
    <groupId>com.microsoft.sqlserver</groupId>
    <artifactId>mssql-jdbc</artifactId>
    <version>7.4.1.jre8</version>
</dependency>

<!-- Oracle DATABASE -->
<dependency>
    <groupId>com.oracle.jdbc</groupId>
    <artifactId>ojdbc8</artifactId>
    <version>8.0</version>
</dependency>

<!-- MySQL DATABASE -->
<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
<dependency>
    <groupId>mysql</groupId>
    <artifactId>mysql-connector-java</artifactId>
    <version>8.0.18</version>
</dependency>

<!-- PostgresQL DATABASE -->
<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
<dependency>
    <groupId>org.postgresql</groupId>
    <artifactId>postgresql</artifactId>
    <version>42.2.8</version>
</dependency>

<!-- HSQLDB DATABASE -->
<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
<dependency>
    <groupId>org.hsqldb</groupId>
    <artifactId>hsqldb</artifactId>
    <version>2.4.1</version>
    <scope>runtime</scope>
</dependency>
</dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <executable>${JAVA_HOME}/bin/javac</executable>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
